feature edit in Dashboard

--- a/WebApp/AutoLight/src/templates/dashboard.html
+++ b/WebApp/AutoLight/src/templates/dashboard.html
@@ -136,13 +136,14 @@
                                 <div class="row">
                                     <div class="col-xs-5">
                                         <div class="icon-big icon-warning text-center">
-                                            <i class="ti-server"></i>
+                                            <i class="ti-shine"></i>
                                         </div>
                                     </div>
                                     <div class="col-xs-7">
                                         <div class="numbers">
-                                            <p>Capacity</p>
-                                            105GB
+                                            <p>Avg Uptime</p>
+                                            12.3
+											<p>Hrs/Day</p>
                                         </div>
                                     </div>
                                 </div>
@@ -161,13 +162,13 @@
                                 <div class="row">
                                     <div class="col-xs-5">
                                         <div class="icon-big icon-success text-center">
-                                            <i class="ti-wallet"></i>
+                                            <i class="ti-timer"></i>
                                         </div>
                                     </div>
                                     <div class="col-xs-7">
                                         <div class="numbers">
-                                            <p>Revenue</p>
-                                            $1,345
+                                            <p>Avg Downtime</p>
+                                            11.7 <p> Hrs/Day</p>
                                         </div>
                                     </div>
                                 </div>
@@ -186,13 +187,13 @@
                                 <div class="row">
                                     <div class="col-xs-5">
                                         <div class="icon-big icon-danger text-center">
-                                            <i class="ti-pulse"></i>
+                                            <i class="ti-stats-up"></i>
                                         </div>
                                     </div>
                                     <div class="col-xs-7">
                                         <div class="numbers">
-                                            <p>Errors</p>
-                                            23
+                                            <p>Temperature</p>
+                                            70 <p>Fahrenheit<p>
                                         </div>
                                     </div>
                                 </div>
@@ -211,13 +212,13 @@
                                 <div class="row">
                                     <div class="col-xs-5">
                                         <div class="icon-big icon-info text-center">
-                                            <i class="ti-twitter-alt"></i>
+                                            <i class="ti-light-bulb"></i>
                                         </div>
                                     </div>
                                     <div class="col-xs-7">
                                         <div class="numbers">
-                                            <p>Followers</p>
-                                            +45
+                                            <p>Faulty Lights</p>
+                                            1/5
                                         </div>
                                     </div>
                                 </div>
@@ -236,8 +237,8 @@
                     <div class="col-md-12">
                         <div class="card">
                             <div class="header">
-                                <h4 class="title">Users Behavior</h4>
-                                <p class="category">24 Hours performance</p>
+                                <h4 class="title">Temperature</h4>
+                                <p class="category">Avg. Monthly Temperature</p>
                             </div>
                             <div class="content">
                                 <div id="chartHours" class="ct-chart"></div>
@@ -260,21 +261,20 @@
                     <div class="col-md-6">
                         <div class="card">
                             <div class="header">
-                                <h4 class="title">Email Statistics</h4>
-                                <p class="category">Last Campaign Performance</p>
+                                <h4 class="title">Humidity</h4>
+                                <p class="category">Avg Monthly Humidity</p>
                             </div>
                             <div class="content">
                                 <div id="chartPreferences" class="ct-chart ct-perfect-fourth"></div>
 
                                 <div class="footer">
                                     <div class="chart-legend">
-                                        <i class="fa fa-circle text-info"></i> Open
-                                        <i class="fa fa-circle text-danger"></i> Bounce
-                                        <i class="fa fa-circle text-warning"></i> Unsubscribe
+                                        <i class="fa fa-circle text-info"></i> Unit
+                                        <i class="fa fa-circle text-danger"></i> g/m^3
                                     </div>
                                     <hr>
                                     <div class="stats">
-                                        <i class="ti-timer"></i> Campaign sent 2 days ago
+                                        <i class="ti-timer"></i> Updated a day ago
                                     </div>
                                 </div>
                             </div>
@@ -283,16 +283,16 @@
                     <div class="col-md-6">
                         <div class="card ">
                             <div class="header">
-                                <h4 class="title">2015 Sales</h4>
-                                <p class="category">All products including Taxes</p>
+                                <h4 class="title">Energy Consumed </h4>
+                                <p class="category">Avg Monthly Data</p>
                             </div>
                             <div class="content">
                                 <div id="chartActivity" class="ct-chart"></div>
 
                                 <div class="footer">
                                     <div class="chart-legend">
-                                        <i class="fa fa-circle text-info"></i> Tesla Model S
-                                        <i class="fa fa-circle text-warning"></i> BMW 5 Series
+                                        <i class="fa fa-circle text-info"></i> Unit
+                                        <i class="fa fa-circle text-warning"></i> Joules
                                     </div>
                                     <hr>
                                     <div class="stats">
