Routing issues fixed

--- a/WebApp/AutoLight/src/templates/dashboard.html
+++ b/WebApp/AutoLight/src/templates/dashboard.html
@@ -58,13 +58,13 @@
                     </a>
                 </li>
                 <li>
-                    <a href="/user">
+                    <a href="/light-control">
                         <i class="ti-user"></i>
                         <p>Light Control</p>
                     </a>
                 </li>
                 <li>
-                    <a href="table.html">
+                    <a href="/weather">
                         <i class="ti-view-list-alt"></i>
                         <p>Weather Prediction</p>
                     </a>
